--- a/src/pages/hotel/hotel.css
+++ b/src/pages/hotel/hotel.css
@@ -108,8 +108,23 @@
     cursor: pointer;
     border-radius: 5px;
   }
+
+  .slider {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    z-index: 999;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.613);
+    width: 100vw;
+    height: 100vh;
+  }
   
-  .slider{
+  /* .slider{
     position: sticky;
     top: 0;
     left: 0;
@@ -119,7 +134,7 @@
     z-index: 999;
     display: flex;
     align-items: center;
-  }
+  } */
   
   .sliderWrapper{
     width: 100%;
